--- a/04-lighting.html
+++ b/04-lighting.html
@@ -28,24 +28,10 @@
   <canvas id="canvas"></canvas>
   <form id="controls">
     <div class="py-1">
-      <label for="light-dir-x">lightDirX</label>
+      <label for="explode">explode</label>
       <input
-        type="range" id="light-dir-x" name="light-dir-x"
-        min="-1" max="1" value="0" step="0.01"
-      >
-    </div>
-    <div class="py-1">
-      <label for="light-dir-y">lightDirY</label>
-      <input
-        type="range" id="light-dir-y" name="light-dir-y"
-        min="-1" max="1" value="-1" step="0.01"
-      >
-    </div>
-    <div class="py-1">
-      <label for="light-dir-z">lightDirZ</label>
-      <input
-        type="range" id="light-dir-z" name="light-dir-z"
-        min="-1" max="1" value="0" step="0.01"
+        type="range" id="explode" name="explode"
+        min="0" max="1" value="0.5" step="0.05"
       >
     </div>
   </form>
