--- a/04-lighting.html
+++ b/04-lighting.html
@@ -28,10 +28,17 @@
   <canvas id="canvas"></canvas>
   <form id="controls">
     <div class="py-1">
-      <label for="explode">explode</label>
+      <label for="explode1">explode1</label>
       <input
-        type="range" id="explode" name="explode"
+        type="range" id="explode1" name="explode1"
         min="0" max="1" value="0.5" step="0.05"
+      >
+    </div>
+    <div class="py-1">
+      <label for="explode2">explode2</label>
+      <input
+        type="range" id="explode2" name="explode2"
+        min="1" max="2" value="1.5" step="0.05"
       >
     </div>
   </form>
