--- a/04-lighting.html
+++ b/04-lighting.html
@@ -41,6 +41,12 @@
         min="3" max="8" value="4" step="0.5"
       >
     </div>
+    <div class="py-1">
+      <input
+        type="button" id="x-button" name="x-button"
+	value="X"
+      >
+    </div>
   </form>
   <script type="module" src="04-lighting.js"></script>
 </body>
