Reset and Scramble (random)

--- a/04-lighting.html
+++ b/04-lighting.html
@@ -63,6 +63,22 @@
         >
       </div>
     </div>
+    <div class="py-1">
+      <div class="btn-group">
+        <input
+          type="button" id="reset" name="reset"
+	  value="reset"
+        >
+        <input
+          type="button" id="scramble" name="scramble"
+	  value="scramble"
+        >
+        <input
+          type="button" id="undo" name="undo"
+	  value="undo"
+        >
+      </div>
+    </div>
   </form>
   <script type="module" src="04-lighting.js"></script>
 </body>
