--- a/04-lighting.html
+++ b/04-lighting.html
@@ -79,6 +79,18 @@
         >
       </div>
     </div>
+    <div class="py-1">
+      <div class="btn-group">
+        <input type="button" id="0" value="0">
+        <input type="button" id="1" value="1">
+        <input type="button" id="2" value="2">
+        <input type="button" id="3" value="3">
+        <input type="button" id="4" value="4">
+        <input type="button" id="5" value="5">
+        <input type="button" id="6" value="6">
+        <input type="button" id="7" value="7">
+      </div>
+    </div>
   </form>
   <script type="module" src="04-lighting.js"></script>
 </body>
