--- a/04-lighting.html
+++ b/04-lighting.html
@@ -61,6 +61,18 @@
           type="button" id="z-button" name="z-button"
 	  value="Z"
         >
+        <input
+          type="button" id="x-button2" name="x-button2"
+	  value="X'"
+        >
+        <input
+          type="button" id="y-button2" name="y-button2"
+	  value="Y'"
+        >
+        <input
+          type="button" id="z-button2" name="z-button2"
+	  value="Z'"
+        >
       </div>
     </div>
     <div class="py-1">
