--- a/04-lighting.html
+++ b/04-lighting.html
@@ -103,6 +103,19 @@
         <input type="button" id="7" value="7">
       </div>
     </div>
+    <div class="py-1">
+      <input type="text" id="redo1" name="redo1" >
+      <div class="btn-group">
+        <input type="button" id="redo2" value="redo">
+      </div>
+    </div>
+    <div class="py-1">
+      <div class="btn-group">
+        <input type="button" id="show" value="dump history">
+      </div>
+      <div id="history"></div>  
+	<input id="history-in">
+    </div>
   </form>
   <script type="module" src="04-lighting.js"></script>
 </body>
