--- a/04-lighting.html
+++ b/04-lighting.html
@@ -114,7 +114,39 @@
         <input type="button" id="show" value="dump history">
       </div>
       <div id="history"></div>  
-	<input id="history-in">
+      <input id="history-in">
+    </div>
+    <div class="py-1">
+      <label for="A0">A0</label>
+      <input type="text" id="A0" >
+    </div>
+    <div class="py-1">
+      <label for="A1">A1</label>
+      <input type="text" id="A1" >
+    </div>
+    <div class="py-1">
+      <label for="A2">A2</label>
+      <input type="text" id="A2" >
+    </div>
+    <div class="py-1">
+      <label for="A3">A3</label>
+      <input type="text" id="A3" >
+    </div>
+    <div class="py-1">
+      <label for="A4">A4</label>
+      <input type="text" id="A4" >
+    </div>
+    <div class="py-1">
+      <label for="A5">A5</label>
+      <input type="text" id="A5" >
+    </div>
+    <div class="py-1">
+      <label for="A6">A6</label>
+      <input type="text" id="A6" >
+    </div>
+    <div class="py-1">
+      <label for="A7">A7</label>
+      <input type="text" id="A7" >
     </div>
   </form>
   <script type="module" src="04-lighting.js"></script>
